--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2007/04/25
+	1. add the packages hppTutorialPlanner and kppTutorialPlanner
+
 2007/04/23
 	First version of General documentation for Humanoid Path
 	Planner. This documentation references the different packages
