--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007/10/01
+	3. Added documentation page on development rules.
+	2. Comment all dependences in configure.ac in order to be able to install the doc before the other packages.
+	
 2007/04/25
 	1. add the packages hppTutorialPlanner and kppTutorialPlanner
 
