--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2007/10/02
+	4. Correction of link to dynamicsJRLJapan.
+	
 2007/10/01
 	3. Added documentation page on development rules.
 	2. Comment all dependences in configure.ac in order to be able to install the doc before the other packages.
