Reorganization of the main page and addition of a link to hppModel.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2007/10/31
+	5. Reorganization of the main page and addition of a link to hppModel.
+
 2007/10/02
 	4. Correction of link to dynamicsJRLJapan.
 	
