Some packages have been added. Documentation is not anymore produced by doxygen.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008/02/07
+	7. Some packages have been added.
+	6. Documentation is not anymore produced by doxygen
+	
 2007/10/31
 	5. Reorganization of the main page and addition of a link to hppModel.
 
