Added a page briefly explaining autotools.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008/02/17
+	8. Added a page briefly explaining autotools.
+
 2008/02/07
 	7. Some packages have been added.
 	6. Documentation is not anymore produced by doxygen
