--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008/02/22
+	9. When package referenced in the documentation is not installed, the link 
+	to this package is redirected to a page explaining how to install the package.
+	
 2008/02/17
 	8. Added a page briefly explaining autotools.
 
