--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
+2008/06/03
+	14. Added "Robotic component" page with links to GenoM and OpenRTM components.
 2008/05/28
-	13 renamed directory doc/abstractRobotsDynamics to doc/abstractRobotDynamics.
+	13. Renamed directory doc/abstractRobotsDynamics to doc/abstractRobotDynamics.
 	12. Added link to hrp2Dynamics
 2008/03/06
 	11. Added link to hppTimingPlanner.
