--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008/06/04
+	16. Added some examples on front page.
+	15. Added documentation on EXTRA_DIST in autotools page
 2008/06/03
 	14. Added "Robotic component" page with links to GenoM and OpenRTM components.
 2008/05/28
