Added picture illustrating walk planning on front page.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+2008/06/19
+	17. Added picture illustrating walk planning on front page.
 2008/06/04
 	16. Added some examples on front page.
 	15. Added documentation on EXTRA_DIST in autotools page
