Added local information pages for packages not installed:   - walk-genom   - hppWalkPlannerCompSpec   - walkPlannerOrtm   - walkPlannerOrtmClient

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 2008/06/19
+	18. Added local information pages for packages not installed.
 	17. Added picture illustrating walk planning on front page.
 2008/06/04
 	16. Added some examples on front page.
