--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+2009/02/03 hppDoc-1.1 release
+	
 2008/06/19
 	18. Added local information pages for packages not installed.
 	17. Added picture illustrating walk planning on front page.
