--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009/03/16 hppDoc-1.2 release
+
+	21. Update links to directories where html doc is now installed.
+	20. Added link to cmake.
+
 2009/02/03 hppDoc-1.1 release
 	
 2008/06/19
