--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+
+	26. Add graph of dependencies between packages
+	25. Added scripts directory as submodule
+	24. Added link to liboptimization
+	23. Update link to hppCmpPlanner
+	22. Update doc to recent changes
+	
 2009/03/16 hppDoc-1.2 release
 
 	21. Update links to directories where html doc is now installed.
