--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,6 @@
+2009/04/23 hppDoc-1.3 release
 
+	27. Add link to roboptim libraries.
 	26. Add graph of dependencies between packages
 	25. Added scripts directory as submodule
 	24. Added link to liboptimization
