Fix link to kwsPlus.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2009/04/30 Florent Lamiraux <florent@laas.fr>	
+
+	* Fix link to kwsPlus
+	
 2009/04/23 hppDoc-1.3 release
 
 	27. Add link to roboptim libraries.
