--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2009-05-28  Florent Lamiraux  <florent@laas.fr>
+
+	Install missing file.
+	* doc/Makefile.am: install stackoftasks/html/main.html. This file is
+	pointed out by the algorithm page when stackoftasks is not installed.
+	* doc/html/algorithm.html.in: remove useless line in table.
+
 2009-05-27  Florent Lamiraux  <florent@laas.fr>
 
 	Add instruction for installing through robotpkg.
