--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2009-07-28  Thomas Moulard  <thomas.moulard@gmail.com>
+
+	Initialize git submodules at boostrap.
+	* bootstrap: Call git submodule init/update if a git
+	directory is set.
+
 2009-05-28  Florent Lamiraux  <florent@laas.fr>
 
 	Install missing file.
