--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2009-10-13  Thomas Moulard  <thomas.moulard@gmail.com>
+
+	Package pkg.m4 macro file to enhance package robustness.
+	* Makefile.am: Search for macro in build-aux, fix copyright year.
+	* build-aux/pkg.m4: New.
+	* configure.ac: Clean and register build-aux as an auxiliary directory.
+	Homogenize style with package-create.
+
 2009-07-28  Thomas Moulard  <thomas.moulard@gmail.com>
 
 	Initialize git submodules at boostrap.
