--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,15 @@
 2010-01-09  Thomas Moulard  <thomas.moulard@gmail.com>
 
+	Use flash video player.
+
+	Note: Videos are currently hosted on
+	http://homepages.laas.fr/tmoulard/
+	They should be moved to a ``safer'' location.
+
+	* doc/main.html.in: Use JW Player to play videos remotely.
+
+2010-01-09  Thomas Moulard  <thomas.moulard@gmail.com>
+
 	Make package dependencies image click-able.
 	* doc/Makefile.am: Generate and install click-able image
 	for package dependencies.
