--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2010-01-11  Thomas Moulard  <thomas.moulard@gmail.com>
+
+	Distribute and install missing files.
+	* doc/Makefile.am: Distribute ``doc/images/kineo.jpg''
+	and install ``docc/graph-dependency.html''.
+
 2010-01-09  Thomas Moulard  <thomas.moulard@gmail.com>
 
 	Convert full HTML pages to Asciidoc.
