--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2010-03-02  Thomas Moulard  <thomas.moulard@gmail.com>
+
+	Fix boostrap.
+	* bootstrap: Fix git-laas help.
+
 2010-03-01  Thomas Moulard  <thomas.moulard@gmail.com>
 
 	Remove spurious EXTRA_FILES.
