--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2010-03-02  Thomas Moulard  <thomas.moulard@gmail.com>
 
+	Update NEWS file.
+	* NEWS: Update for release 2.0.
+
+2010-03-02  Thomas Moulard  <thomas.moulard@gmail.com>
+
 	Fix boostrap.
 	* bootstrap: Fix git-laas help.
 
