--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,6 @@
                                                                 -*- outline -*-
-
+New in 2.0.2
+* Fix detection of hpp-corbaserver
 New in 2.0, 2010-03-02:
 * Make graph clickable.
 * Use Asciidoc to format documentation.
