--- a/README
+++ b/README
@@ -12,10 +12,10 @@ Installation
 To install all the packages under ubuntu 12.04 LTS, you should do the following
 steps:
 
-  1. install through apt-get
+  1. install by apt-get (see http://wiki.ros.org/groovy/Installation/Ubuntu)
     - ros-groovy-desktop-full,
     - ros-groovy-libccd,
-    - ascii-doc,
+    - asciidoc,
     - source-highlight
 
   2. Choose a directory on you file system and define the environment
