--- a/README
+++ b/README
@@ -16,7 +16,8 @@ steps:
     - ros-groovy-desktop-full,
     - ros-groovy-libccd,
     - asciidoc,
-    - source-highlight
+    - source-highlight,
+    - git
 
   2. Choose a directory on you file system and define the environment
      variable DEVEL_DIR with the full path to this directory.
@@ -27,7 +28,11 @@ steps:
    - https://raw.githubusercontent.com/humanoid-path-planner/hpp-doc/master/doc/config.sh in $DEVEL_DIR, and
    -https://raw.githubusercontent.com/humanoid-path-planner/hpp-doc/master/doc/Makefile in $DEVEL_DIR/src 
   
-  4. cd into $DEVEL_DIR/src and type
+  4. cd into $DEVEL_DIR and type
+
+    source config.sh
+
+  5. cd into $DEVEL_DIR/src and type
 
     make all.
 
