--- a/README
+++ b/README
@@ -9,14 +9,19 @@ Humanoid Path Planner is a software platform aimed at solving motion planning
 problems for humanoid robots. It is also designed to solve classical (non
 humanoid) path planning problems.
 
-##Installation
+##Installation on ubuntu-12.04 with ros-hydro
 
-To install all the packages under ubuntu 12.04 LTS, you should do the following
+Installation with ros-groovy can be found by checking out branch ros-groovy
+of this package.
+
+To install all the packages on ubuntu 12.04 LTS, you should do the following
 steps:
 
-  1. install by apt-get (see http://wiki.ros.org/groovy/Installation/Ubuntu)
-    - ros-groovy-desktop-full,
-    - ros-groovy-libccd,
+  1. install by apt-get (see http://wiki.ros.org/hydro/Installation/Ubuntu)
+    - ros-hydro-desktop-full,
+    - ros-hydro-pr2-robot,
+    - ros-hydro-libccd,
+    - ros-hydro-srdfdom,
     - asciidoc,
     - source-highlight,
     - git,
@@ -26,7 +31,7 @@ steps:
     - omniidl-python
 
 
-        sudo apt-get install ros-groovy-desktop-full ros-groovy-libccd asciidoc source-highlight git libomniorb4-dev omniorb-nameserver omniidl omniidl-python
+        sudo apt-get install ros-hydro-desktop-full ros-hydro-pr2-robot ros-hydro-libccd ros-hydro-srdfdom asciidoc source-highlight git libomniorb4-dev omniorb-nameserver omniidl omniidl-python
 
   2. Choose a directory on you file system and define the environment
      variable DEVEL_DIR with the full path to this directory.
