Fix installation instruction.

--- a/README
+++ b/README
@@ -41,7 +41,8 @@ steps:
 
   3. Copy Config and Makefile
         
-        wget https://raw.githubusercontent.com/humanoid-path-planner/hpp-doc/master/doc/config.sh $DEVEL_DIR && wget https://raw.githubusercontent.com/humanoid-path-planner/hpp-doc/master/doc/Makefile $DEVEL_DIR/src
+        wget -O $DEVEL_DIR/config.sh https://raw.githubusercontent.com/humanoid-path-planner/hpp-doc/master/doc/config.sh
+	wget -O $DEVEL_DIR/src/Makefile https://raw.githubusercontent.com/humanoid-path-planner/hpp-doc/master/doc/Makefile
   
   4. cd into $DEVEL_DIR and type
 
