Fix installation instructions.

--- a/README
+++ b/README
@@ -11,7 +11,7 @@ humanoid) path planning problems.
 
 ##Installation on ubuntu-12.04 with ros-hydro
 
-Installation with ros-groovy can be found by checking out branch ros-groovy
+Installation instructions with ros-groovy can be found by checking out branch ros-groovy
 of this package.
 
 To install all the packages on ubuntu 12.04 LTS, you should do the following
@@ -42,6 +42,7 @@ steps:
   3. Copy Config and Makefile
         
         wget -O $DEVEL_DIR/config.sh https://raw.githubusercontent.com/humanoid-path-planner/hpp-doc/master/doc/config.sh
+
 	wget -O $DEVEL_DIR/src/Makefile https://raw.githubusercontent.com/humanoid-path-planner/hpp-doc/master/doc/Makefile
   
   4. cd into $DEVEL_DIR and type
@@ -50,6 +51,8 @@ steps:
 
   5. cd into $DEVEL_DIR/src and type
 
+    make robot_state_chain_publisher.install
+    source ../config.sh
     make all.
 
 ##Documentation
