--- a/README
+++ b/README
@@ -9,53 +9,67 @@ Humanoid Path Planner is a software platform aimed at solving motion planning
 problems for humanoid robots. It is also designed to solve classical (non
 humanoid) path planning problems.
 
-##Installation on ubuntu-12.04 with ros-hydro
+##Installation on ubuntu-14.04 64 bit with ros-indigo
 
-Installation instructions with ros-groovy can be found by checking out branch ros-groovy
-of this package.
+To install all the packages on ubuntu 14.04 LTS 64 bit, you should do the following steps:
 
-To install all the packages on ubuntu 12.04 LTS, you should do the following
-steps:
+  1. install by apt-get
+    - autoconf
+    - g++
+    - cmake
+    - libboost-dev
+    - liburdfdom-dev
+    - libassimp-dev
+    - ros-indigo-xacro
+    - ros-indigo-kdl-parser
+    - ros-indigo-common-msgs
+    - ros-indigo-tf
+    - ros-indigo-tf-conversions
+    - ros-indigo-libccd
+    - ros-indigo-octomap
+    - ros-indigo-resource-retriever
+    - ros-indigo-urdfdom-py
+    - ros-indigo-srdfdom
+    - ros-indigo-pr2-robot
+    - flex
+    - bison
+    - asciidoc
+    - source-highlight
+    - git
+    - libomniorb4-dev
+    - omniorb-nameserver
+    - omniidl
+    - omniidl-python
+    - libltdl-dev
+    - python-matplotlib
 
-  1. install by apt-get (see http://wiki.ros.org/hydro/Installation/Ubuntu)
-    - autotools-dev,
-    - ros-hydro-desktop-full,
-    - ros-hydro-pr2-robot,
-    - ros-hydro-libccd,
-    - ros-hydro-srdfdom,
-    - asciidoc,
-    - source-highlight,
-    - git,
-    - libomniorb4-dev,
-    - omniorb-nameserver,
-    - omniidl,
-    - omniidl-python,
-    - nvidia-cg-toolkit
+        sudo apt-get install autoconf g++ cmake libboost-dev liburdfdom-dev libassimp-dev ros-indigo-xacro ros-indigo-kdl-parser ros-indigo-common-msgs ros-indigo-tf ros-indigo-tf-conversions ros-indigo-libccd ros-indigo-octomap ros-indigo-resource-retriever ros-indigo-srdfdom ros-indigo-pr2-robot flex bison asciidoc source-highlight git libomniorb4-dev omniorb-nameserver omniidl omniidl-python libltdl-dev python-matplotlib
 
+  2. install dependencies of openscenegraph:
 
-        sudo apt-get install autotools-dev ros-hydro-desktop-full ros-hydro-pr2-robot ros-hydro-libccd ros-hydro-srdfdom asciidoc source-highlight git libomniorb4-dev omniorb-nameserver omniidl omniidl-python nvidia-cg-toolkit
+	sudo apt-get build-dep openscenegraph
 
-  2. Choose a directory on you file system and define the environment
+  3. Choose a directory on you file system and define the environment
      variable DEVEL_DIR with the full path to this directory.
      - the packages will be cloned into $DEVEL_DIR/src,
      - the packages will be installed in $DEVEL_DIR/install.
      It is recommanded to set variable DEVEL_DIR in your .bashrc for future use.
 
-  3. Copy Config and Makefile
+  4. Copy Config and Makefile
         
-        wget -O $DEVEL_DIR/config.sh https://raw.githubusercontent.com/humanoid-path-planner/hpp-doc/master/doc/config.sh
+        wget -O $DEVEL_DIR/config.sh https://raw.githubusercontent.com/humanoid-path-planner/hpp-doc/devel/doc/config.sh
 
-	wget -O $DEVEL_DIR/src/Makefile https://raw.githubusercontent.com/humanoid-path-planner/hpp-doc/master/doc/Makefile
+	wget -O $DEVEL_DIR/src/Makefile https://raw.githubusercontent.com/humanoid-path-planner/hpp-doc/devel/doc/Makefile
   
-  4. cd into $DEVEL_DIR and type
+  5. cd into $DEVEL_DIR and type
 
     source config.sh
 
-  5. cd into $DEVEL_DIR/src and type
+  6. cd into $DEVEL_DIR/src and type
 
-    make robot_state_chain_publisher.install
-    source ../config.sh
-    make all.
+    make robot_state_chain_publisher.install;
+    source ../config.sh;
+    make all
 
 ##Documentation
 
