Update README.md and doc/Makefile and add scripts to check installation.

--- a/README
+++ b/README
@@ -13,7 +13,10 @@ humanoid) path planning problems.
 
 To install all the packages on ubuntu 14.04 LTS 64 bit, you should do the following steps:
 
-  1. install by apt-get
+  1. install ROS-indigo (steps 1.1 - 1.3)
+    - see http://wiki.ros.org/indigo/Installation/Ubuntu.
+
+  2. install by apt-get
     - autoconf
     - g++
     - cmake
@@ -43,8 +46,14 @@ To install all the packages on ubuntu 14.04 LTS 64 bit, you should do the follow
     - libltdl-dev
     - python-matplotlib
     - libtinyxml2-dev
+    - liblog4cxx10-dev
+    - libltdl-dev
+    - qt4-dev-tools
+    - libqt4-opengl-dev
+    - libqtgui4
+    - oxygen-icon-theme
 
-        sudo apt-get install autoconf g++ cmake libboost-dev liburdfdom-dev libassimp-dev ros-indigo-xacro ros-indigo-kdl-parser ros-indigo-common-msgs ros-indigo-tf ros-indigo-tf-conversions ros-indigo-libccd ros-indigo-octomap ros-indigo-resource-retriever ros-indigo-srdfdom ros-indigo-pr2-robot flex bison asciidoc source-highlight git libomniorb4-dev omniorb-nameserver omniidl omniidl-python libltdl-dev python-matplotlib libtinyxml2-dev
+        sudo apt-get install autoconf g++ cmake libboost-dev liburdfdom-dev libassimp-dev ros-indigo-xacro ros-indigo-kdl-parser ros-indigo-common-msgs ros-indigo-tf ros-indigo-tf-conversions ros-indigo-libccd ros-indigo-octomap ros-indigo-resource-retriever ros-indigo-srdfdom ros-indigo-pr2-robot flex bison asciidoc source-highlight git libomniorb4-dev omniorb-nameserver omniidl omniidl-python libltdl-dev python-matplotlib libtinyxml2-dev liblog4cxx10-dev libltdl-dev qt4-dev-tools libqt4-opengl-dev libqtgui4 oxygen-icon-theme
 
   2. install dependencies of openscenegraph:
 
